--- a/package.json
+++ b/package.json
@@ -7,28 +7,35 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^7",
-    "express": "^4",
-    "@sap/cds-hana": "^2"
+    "@sap/cds-hana": "^2",
+    "@sap/hana-client": "^2.18.24",
+    "express": "^4"
   },
   "scripts": {
     "start": "cds-serve"
   },
   "cds": {
     "build": {
-        "tasks": [
-            {
-                "for": "hana",
-                "dest": "../db"
-            },
-            {
-                "for": "node-cf"
-            }
-        ]
+      "tasks": [
+        {
+          "for": "hana",
+          "dest": "../db"
+        },
+        {
+          "for": "node-cf"
+        }
+      ]
     },
     "requires": {
-        "db": {
-            "kind": "hana-cloud"
-        }
+      "db": {
+        "kind": "hana-cloud"
+      }
+    },
+    "hana": {
+      "deploy-format": "hdbtable"
     }
+  },
+  "devDependencies": {
+    "@sap/hdi-deploy": "4.8.2"
   }
 }
